Bug #38566 Falcon crash in RecordVersion::thaw at RecordVersion.cpp:421

Removed unnecessary log messages
Modified assertions to accommodate race condition where two threads thaw the same record